alterações de estilo

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -129,7 +129,6 @@
 .cards-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-end;
 }
 
 .product-card {
@@ -138,8 +137,7 @@
 }
 
 .img-card {
-  border: 1px solid black;
-  height: 12rem;
+  max-height: 12rem;
 }
 
 .product-qtd {
