--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -164,6 +164,12 @@
   margin: 20px 0;
 }
 
+/* Checkout Page */
+
+.address-content {
+  margin: 4rem 0 8rem;
+}
+
 /* All Pages */
 
 .main-page {
