--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -170,6 +170,18 @@
   margin: 4rem 0 8rem;
 }
 
+.checkout-card {
+  margin: 20px 0;
+}
+
+.checkout-text {
+  margin: 20px;
+}
+
+.checkout-title {
+  margin: 20px 0;
+}
+
 /* All Pages */
 
 .main-page {
