--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -188,9 +188,21 @@
   margin-top: 1rem;
 }
 
+/* Admin Profile Page */
+
+.admin-profile {
+  display: flex;
+}
+
+.admin-sidebar {
+  height: 100vh;
+  padding: 2vh;
+}
+
 /* All Pages */
 
 .main-page {
-  margin: 100px 300px 0;
-  padding: 20px;
+  margin: 6vh 12vh 0;
+  padding: 2vh;
+  justify-content: center;
 }
