--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -18,6 +18,17 @@
   padding-left: 250px;
 }
 
+#cartButton {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#cartButton.cart-toggled {
+  margin-left: 250px!important;
+}
+
 #sidebar-wrapper {
   z-index: 1000;
   position: fixed;
@@ -25,6 +36,7 @@
   width: 0;
   height: 100%;
   margin-left: -250px;
+  margin-top: 8px;
   overflow-y: auto;
   background: #000;
   -webkit-transition: all 0.5s ease;
@@ -98,11 +110,11 @@
 
 @media (min-width: 768px) {
   #wrapper {
-    padding-left: 250px;
+    padding-left: 0;
   }
 
   #wrapper.toggled {
-    padding-left: 0;
+    padding-left: 250px;
   }
 
   #sidebar-wrapper {
@@ -130,6 +142,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  margin-top: 4rem;
 }
 
 .cards-list {
