--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 /* Toggle Styles */
 
 #wrapper {
@@ -19,10 +13,7 @@
 }
 
 #cartButton {
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+  z-index: 50;
 }
 
 #cartButton.cart-toggled {
@@ -36,9 +27,8 @@
   width: 0;
   height: 100%;
   margin-left: -250px;
-  margin-top: 8px;
   overflow-y: auto;
-  background: #000;
+  background: #D17A22;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -57,7 +47,7 @@
 
 #wrapper.toggled #page-content-wrapper {
   position: absolute;
-  margin-right: -250px;
+  margin-right: 250px;
 }
 
 /* Sidebar Styles */
@@ -67,6 +57,7 @@
   top: 0;
   width: 250px;
   margin: 0;
+  margin-top: 40px;
   padding: 0;
   list-style: none;
 }
@@ -79,7 +70,7 @@
 .sidebar-nav li a {
   display: block;
   text-decoration: none;
-  color: #999999;
+  color: white;
 }
 
 .sidebar-nav li a:hover {
@@ -184,6 +175,9 @@
 }
 
 .checkout-card {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: row;
   margin: 20px 0;
 }
 
@@ -193,6 +187,16 @@
 
 .checkout-title {
   margin: 20px 0;
+}
+
+#checkoutFinalizeButton {
+  z-index: 50!important;
+}
+
+.checkoutOrdersList {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 /* Client Profile Page */
@@ -231,6 +235,11 @@
   justify-content: center;
 }
 
+.btn-custom {
+  color: white;
+  border-color: #8A3033;
+  background-color: #8A3033;
+}
 /* All Pages */
 
 .main-page {
